--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <section id="social" class="bg-t">
   <h2>Social Media</h2>
-  <p>You can find me on</p>
+  <p>You can reach me on</p>
   <p>ehsin0629@gmail.com</p>
   <ul class="social-ul">
     <a href="https://www.facebook.com/profile.php?id=100001027097561" class="fa fa-facebook"></a>
