--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
 <section id="social" class="bg-t">
   <h2>Social Media</h2>
-  <p>You can reach me on</p>
-  <p>ehsin0629@gmail.com</p>
+  <p>You can reach me at</p>
   <ul class="social-ul">
+    <a href="mailto:ehsin0629@gmail.com" class="fa fa-google"></a>
     <a href="https://www.facebook.com/profile.php?id=100001027097561" class="fa fa-facebook"></a>
     <a href="https://www.instagram.com/eric.hsin/" class="fa fa-instagram"></a>
     <a href="https://codepen.io/erichsin" class="fa fa-codepen"></a>
