--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <section id="projects">
   <h2>Projects</h2>
   <div class="project-container">  
-  <div class="project-title"><img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.15752-9/122906669_358034558872734_3031352911839201505_n.png?_nc_cat=104&ccb=2&_nc_sid=ae9488&_nc_ohc=g5_J91VTDGEAX8Swnkr&_nc_ht=scontent-sjc3-1.xx&oh=a560755975c2f1b3205676fadca6f020&oe=5FBD8A84" alt="Tribute Page Project"><a class="project-tile" href="https://codepen.io/erichsin/pen/LYZYRBv" target="_blank">Tribute Page Project</a></div>
-  <div class="project-title"><img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.15752-9/122903489_1262831260769190_5608287305188868853_n.png?_nc_cat=105&ccb=2&_nc_sid=ae9488&_nc_ohc=q_-p9nyXDkcAX_mwpV8&_nc_ht=scontent-sjc3-1.xx&oh=31305e0968f66182d37aefb435be429d&oe=5FBDF6D5" alt="Survery Form Project"><a class="project-tile" href="https://codepen.io/erichsin/pen/JjKYegX" target="_blank">Survey Form Project</a></div>
-  <div class="project-title"><img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.15752-9/122719064_379856786494707_882010897249316153_n.png?_nc_cat=111&ccb=2&_nc_sid=ae9488&_nc_ohc=6MZKgPL1LZEAX_ek4PZ&_nc_ht=scontent-sjc3-1.xx&oh=0a34aec125d6dc824ee6a45fb569d58d&oe=5FBBD42F" alt="Technical Documentation Project"><a class="project-tile" href="https://codepen.io/erichsin/pen/WNxoRWx" target="_blank">Technical Documentation Page Project</a></div>
-  <div class="project-title"><img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.15752-9/122995109_1224995951207823_3737423147296386776_n.png?_nc_cat=108&ccb=2&_nc_sid=ae9488&_nc_ohc=erVKMVXiDAMAX_W85I1&_nc_ht=scontent-sjc3-1.xx&oh=38cc14d8ddaa0748e3b526bc925dc24c&oe=5FBE053E" alt="Product Landing Page Project"><a class="project-tile" href="https://codepen.io/erichsin/pen/BazKrZz" target="_blank">Product Landing Page Project</a></div>
+  <div class="project-title"><img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.15752-9/122906669_358034558872734_3031352911839201505_n.png?_nc_cat=104&ccb=2&_nc_sid=ae9488&_nc_ohc=thQCu1ZfKLcAX-dPMeP&_nc_ht=scontent-sjc3-1.xx&oh=3e7d5d4e63f080aaa38a1dc8b8d1349b&oe=6008B004" alt="Tribute Page Project"><a class="project-tile" href="https://codepen.io/erichsin/pen/LYZYRBv" target="_blank">Tribute Page Project</a></div>
+  <div class="project-title"><img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.15752-9/122903489_1262831260769190_5608287305188868853_n.png?_nc_cat=105&ccb=2&_nc_sid=ae9488&_nc_ohc=OxV2mVDGPFIAX8qLX9v&_nc_ht=scontent-sjc3-1.xx&oh=a23d2b6dcaba20dd9185e202114ccc69&oe=60091C55" alt="Survery Form Project"><a class="project-tile" href="https://codepen.io/erichsin/pen/JjKYegX" target="_blank">Survey Form Project</a></div>
+  <div class="project-title"><img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.15752-9/122719064_379856786494707_882010897249316153_n.png?_nc_cat=111&ccb=2&_nc_sid=ae9488&_nc_ohc=KuxcaGTrj6kAX_yomnh&_nc_ht=scontent-sjc3-1.xx&oh=7a3b00ddd97f397defb252870f2118ba&oe=6006F9AF" alt="Technical Documentation Project"><a class="project-tile" href="https://codepen.io/erichsin/pen/WNxoRWx" target="_blank">Technical Documentation Page Project</a></div>
+  <div class="project-title"><img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.15752-9/122995109_1224995951207823_3737423147296386776_n.png?_nc_cat=108&ccb=2&_nc_sid=ae9488&_nc_ohc=NUM9h79yYeIAX-tl4ss&_nc_ht=scontent-sjc3-1.xx&oh=7849fe50d22cf29f6534d88e28a334ca&oe=60092ABE" alt="Product Landing Page Project"><a class="project-tile" href="https://codepen.io/erichsin/pen/BazKrZz" target="_blank">Product Landing Page Project</a></div>
 </div>
     </section>
 
@@ -28,10 +28,10 @@
   <p>You can reach me at</p>
   <ul class="social-ul">
     <a href="mailto:ehsin0629@gmail.com" class="fa fa-google"></a>
-    <a href="https://www.facebook.com/profile.php?id=100001027097561" class="fa fa-facebook"></a>
-    <a href="https://www.instagram.com/eric.hsin/" class="fa fa-instagram"></a>
-    <a href="https://codepen.io/erichsin" class="fa fa-codepen"></a>
-    <a href="https://www.linkedin.com/in/erichsin/" class="fa fa-linkedin"></a>
+    <a href="https://www.facebook.com/profile.php?id=100001027097561" target="_blank" class="fa fa-facebook"></a>
+    <a href="https://www.instagram.com/eric.hsin/" target="_blank" class="fa fa-instagram"></a>
+    <a href="https://codepen.io/erichsin" target="_blank" class="fa fa-codepen"></a>
+    <a href="https://www.linkedin.com/in/erichsin/" target="_blank" class="fa fa-linkedin"></a>
 
   </ul>
 </section>
