--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <section id="projects">
   <h2>Projects</h2>
   <div class="project-container">  
-  <div class="project-title"><img src="images/hannamontana.jpg.png" alt="Tribute Page Project"><a class="project-tile" href="https://ehsin0629.github.io/Tribute-Page/" target="_blank">Tribute Page Project</a></div>
+  <div class="project-title"><img src="images/hannah.jpg" alt="Tribute Page Project"><a class="project-tile" href="https://ehsin0629.github.io/Tribute-Page/" target="_blank">Tribute Page Project</a></div>
   <div class="project-title"><img src="images/survey.jpg" alt="Survery Form Project"><a class="project-tile" href="https://ehsin0629.github.io/surveyform/" target="_blank">Survey Form Project</a></div>
   <div class="project-title"><img src="images/technicaldoc.jpg" alt="Technical Documentation Project"><a class="project-tile" href="https://ehsin0629.github.io/technicaldocumentation/" target="_blank">Technical Documentation Page Project</a></div>
   <div class="project-title"><img src="images/product.jpg" alt="Product Landing Page Project"><a class="project-tile" href="https://ehsin0629.github.io/product-landing-page/" target="_blank">Product Landing Page Project</a></div>
