--- a/index.html
+++ b/index.html
@@ -25,15 +25,13 @@
 
 <section id="social" class="bg-t">
   <h2>Social Media</h2>
-  <p>You can reach me at</p>
+  <p>You can find me here</p>
   <ul class="social-ul">
-    <a href="mailto:ehsin0629@gmail.com" class="fa fa-google"></a>
-    <a href="https://www.facebook.com/profile.php?id=100001027097561" target="_blank" class="fa fa-facebook"></a>
-    <a href="https://www.instagram.com/eric.hsin/" target="_blank" class="fa fa-instagram"></a>
+    <a target="_blank" href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=ehsin0629@gmail.com" class="fa fa-google"></a>
+    <a href="https://github.com/ehsin0629" target="_blank" class="fa fa-github"></a>
     <a href="https://codepen.io/erichsin" target="_blank" class="fa fa-codepen"></a>
     <a href="https://www.linkedin.com/in/erichsin/" target="_blank" class="fa fa-linkedin"></a>
-
-  </ul>
+      </ul>
 </section>
 
 <footer>Made by Eric Hsin</footer>
