--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <header id="welcome">
   <h1>Hello! :D</h1>
   <p>I am Eric </p>
-  <p> an aspiring software developer</p>
+  <p> an aspiring full stack developer</p>
 </header>
 
 <section id="projects">
